# NeuroFlow-HiDevs

./: .env.example  .gitignore  .secrets.baseline  Makefile  README.md  railway.json
.github/workflows/: build.yml  ci.yml  quality-gate.yml  security.yml
backend/: Dockerfile  config.py  main.py  requirements.txt  worker.py
backend/api/: admin.py  auth.py  compare.py  evaluations.py  finetune.py  ingest.py  pipelines.py  query.py  runs.py
backend/db/: health.py  migrations.py  pool.py
backend/models/: __init__.py  pipeline.py
backend/monitoring/: __init__.py  metrics.py
backend/providers/: __init__.py  anthropic_provider.py  base.py  client.py  openai_provider.py  router.py
backend/resilience/: backpressure.py  circuit_breaker.py  rate_limiter.py  timeout_manager.py
backend/security/: __init__.py  prompt_injection.py  secret_detector.py  validators.py
docs/: api-contracts.md  architecture.md  deployment.md  runbook.md
docs/adr/: 001-vector-store.md  002-chunking-strategy.md  003-evaluation-framework.md  004-model-routing.md
evaluation/: calibrate.py  generation_eval.py  improvement_log.md  judge.py  quality_baseline.json  quality_final.json  retrieval_eval.py
evaluation/metrics/: answer_relevance.py  context_precision.py  context_recall.py  faithfulness.py
frontend/: Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json
infra/: docker-compose.prod.yml  docker-compose.yml
pipelines/: __init__.py
sdk/: README.md  pyproject.toml
sdk/examples/: quickstart.py
sdk/neuroflow/: __init__.py  client.py  models.py
(+46 files in other folders)
