[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroflow-sdk"
dynamic = ["version"]
description = "Python SDK for NeuroFlow RAG platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "NeuroFlow Team" },
]
keywords = [
    "rag",
    "neuroflow",
    "api",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/neuroflow/neuroflow"
Documentation = "https://neuroflow.readthedocs.io/"

[tool.hatch.version]
source = "file"
path = "neuroflow/_version.py"
